--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
@@ -21,6 +22,8 @@
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "prettier": "^3.3.3",
+    "sass": "^1.82.0",
+    "sass-loader": "^16.0.4",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5"
   }
